@@ -1,3 +1,7 @@
+2006-04-10  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourceview.c: constify the drop target list.
+
 2006-04-09  Steve Frécinaux  <steve@istique.net>
 
 	* configure.ac:
